--- a/src/site/sass/main.sass
+++ b/src/site/sass/main.sass
@@ -222,7 +222,7 @@ body
 
 .post-page-divider
 	display: grid
-	grid-template-columns: 360px auto
+	grid-template-columns: auto 360px
 	max-width: 1200px
 	margin: 0 auto
 	min-height: 100vh
@@ -230,6 +230,35 @@ body
 	@media screen and (max-width: $layout-a-max)
 		display: flex
 		flex-direction: column
+
+	.images-gallery
+		display: flex
+		flex-direction: column
+		align-items: center
+		justify-content: center
+		background-color: #262728
+		padding: 10px
+
+		@media screen and (max-width: $layout-a-max)
+			flex: 1
+			position: relative
+
+		.sized-image, .sized-video
+			color: #eee
+			background-color: #3b3c3d
+			max-height: 94vh
+			max-width: 100%
+
+			&:not(:last-child)
+				margin-bottom: 10px
+
+		.sized-image
+			width: auto
+			height: auto
+
+		.sized-video
+			width: auto
+			height: auto
 
 	.description-section
 		display: grid
@@ -322,36 +351,7 @@ body
 				padding-bottom: 20px
 
 			@media screen and (max-width: $layout-a-max)
-				font-size: 18px
-
-	.images-gallery
-		display: flex
-		flex-direction: column
-		align-items: center
-		justify-content: center
-		background-color: #262728
-		padding: 10px
-
-		@media screen and (max-width: $layout-a-max)
-			flex: 1
-			position: relative
-
-		.sized-image, .sized-video
-			color: #eee
-			background-color: #3b3c3d
-			max-height: 94vh
-			max-width: 100%
-
-			&:not(:last-child)
-				margin-bottom: 10px
-
-		.sized-image
-			width: auto
-			height: auto
-
-		.sized-video
-			width: auto
-			height: auto
+				font-size: 18px	
 
 .error-page
 	box-sizing: border-box
